# desafio-corpsystem

./: .env.sample  .env_old  .gitignore  Dockerfile  Insomnia_2024-06-21.json  Procfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
apps/compras/: models.py  setializers.py  tests.py  urls.py  views.py
apps/estoque/: models.py  serializers.py  tests.py  urls.py  views.py
apps/vendas/: models.py  serializers.py  tests.py  urls.py  views.py
data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ib_buffer_pool
data/corpsystem/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  compras_compra.ibd  compras_comprador.ibd  django_admin_log.ibd  django_content_type.ibd  django_migrations.ibd  django_session.ibd  estoque_estoque.ibd  estoque_produto.ibd  vendas_venda.ibd  vendas_vendedor.ibd
data/mysql/: general_log_207.sdi  slow_log_208.sdi
data/performance_schema/: accounts_142.sdi  binary_log_trans_184.sdi  cond_instances_81.sdi  data_lock_waits_158.sdi  data_locks_157.sdi  events_errors_su_136.sdi  events_errors_su_137.sdi  events_errors_su_138.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_stages_cu_108.sdi  events_stages_hi_109.sdi  events_stages_hi_110.sdi  events_stages_su_111.sdi  events_stages_su_112.sdi  events_stages_su_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_statement_116.sdi  events_statement_117.sdi  (+85 more)
desafio_corpsystem/: asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
